[tool.poetry]
name = "tentacruel"
version = "0.1.0"
description = "Software library and GUI for Denon HEOS speakers and amplifiers"
authors = ["Paul Houle <paul.houle@ontology2.com>"]

[tool.poetry.dev-dependencies]
pytest = "^3.0"
[tool.poetry.dependencies]
pyyaml = "^3.13"
skyfield = "^1.10"
python-dateutil = "^2.8"
phue = "^1.1"
boto3 = "^1.9"
python-arango = "^4.4"
pytz = "^2018.9"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"